containers/api-reports-generator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-reports-generator
  labels:
    app: api-reports-generator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-reports-generator
  template:
    metadata:
      labels:
        app: api-reports-generator
    spec:
      containers:
        - name: api-reports-generator
          image: hendrikutt/api:latest
          imagePullPolicy: Always
      imagePullSecrets:
        - name: myregistrysecret
