containers/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    app: api
spec:
#  replicas = how many concurrent uploads/transcribe requests
#  and also how many concurrent renders (keep in mind that Remotion can use 200 workers at the same time and also check AWS lambda limit)
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: hendrikutt/api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /ping/liveness
              port: 3000
            initialDelaySeconds: 2
            timeoutSeconds: 2
            periodSeconds: 10
            failureThreshold: 3

          # If this probe fails, the Kubernetes service does not send traffic to the pod, but it doesn't kill the container. Use readiness probes to control which pods should receive traffic.
          readinessProbe:
            httpGet:
              path: /ping/readiness
              port: 3000
            initialDelaySeconds: 2
            timeoutSeconds: 2
            periodSeconds: 10
            successThreshold: 1

          volumeMounts:
            - name: shared-incoming-files
              mountPath: /usr/src/app/src/features/remotion/incoming_files
            - name: shared-incoming-request-payloads
              mountPath: /usr/src/app/src/features/remotion/incoming_request_payloads
      volumes:
        - name: shared-incoming-files
          hostPath:
            path: /mnt/HC_Volume_100043635/incoming_files
        - name: shared-incoming-request-payloads
          hostPath:
            path: /mnt/HC_Volume_100043635/incoming_request_payloads
      imagePullSecrets:
        - name: myregistrysecret

      # waiting time after SIGTERM is received and before receiving SIGKILL (this should be longer than the possible longest amount of time transcription could take, etc. 20 min media clip)
      terminationGracePeriodSeconds: 150
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
